airflow/logs/dag_id=kaggle_dataset/run_id=manual__2024-05-23T011545.195685+0000/task_id=load_task/attempt=3.log
[2024-05-23T21:45:15.334+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-23T21:45:15.369+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: kaggle_dataset.load_task manual__2024-05-23T01:15:45.195685+00:00 [queued]>
[2024-05-23T21:45:15.383+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: kaggle_dataset.load_task manual__2024-05-23T01:15:45.195685+00:00 [queued]>
[2024-05-23T21:45:15.385+0000] {taskinstance.py:2306} INFO - Starting attempt 3 of 3
[2024-05-23T21:45:15.409+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): load_task> on 2024-05-23 01:15:45.195685+00:00
[2024-05-23T21:45:15.421+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=2345) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-23T21:45:15.423+0000] {standard_task_runner.py:63} INFO - Started process 2369 to run task
[2024-05-23T21:45:15.424+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'kaggle_dataset', 'load_task', 'manual__2024-05-23T01:15:45.195685+00:00', '--job-id', '53', '--raw', '--subdir', 'DAGS_FOLDER/kaggle_dataset.py', '--cfg-path', '/tmp/tmp35ksum7_']
[2024-05-23T21:45:15.428+0000] {standard_task_runner.py:91} INFO - Job 53: Subtask load_task
[2024-05-23T21:45:15.512+0000] {task_command.py:426} INFO - Running <TaskInstance: kaggle_dataset.load_task manual__2024-05-23T01:15:45.195685+00:00 [running]> on host 7ef43f6735eb
[2024-05-23T21:45:15.650+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='kaggle_dataset' AIRFLOW_CTX_TASK_ID='load_task' AIRFLOW_CTX_EXECUTION_DATE='2024-05-23T01:15:45.195685+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-23T01:15:45.195685+00:00'
[2024-05-23T21:45:15.652+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-23T21:45:15.668+0000] {sql.py:276} INFO - Executing: call etl_kaggle.sp_load_fact_global_economic_ind
[2024-05-23T21:45:15.684+0000] {base.py:84} INFO - Using connection ID 'postgrest_projects' for task execution.
[2024-05-23T21:45:15.697+0000] {base.py:84} INFO - Using connection ID 'postgrest_projects' for task execution.
[2024-05-23T21:45:15.784+0000] {sql.py:470} INFO - Running statement: call etl_kaggle.sp_load_fact_global_economic_ind, parameters: None
[2024-05-23T21:45:15.791+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-23T21:45:15.793+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: error de sintaxis al final de la entrada
LINE 1: call etl_kaggle.sp_load_fact_global_economic_ind
                                                        ^

[2024-05-23T21:45:15.814+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=kaggle_dataset, task_id=load_task, run_id=manual__2024-05-23T01:15:45.195685+00:00, execution_date=20240523T011545, start_date=20240523T214515, end_date=20240523T214515
[2024-05-23T21:45:15.838+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 53 for task load_task (error de sintaxis al final de la entrada
LINE 1: call etl_kaggle.sp_load_fact_global_economic_ind
                                                        ^
; 2369)
[2024-05-23T21:45:15.881+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-23T21:45:15.901+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-05-23T21:45:15.931+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-23T21:45:15.940+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
